--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body{
 /* ------
 Section-1
 --------- */
-.section.section-1{
-    align-items: center;
+section.section-1 {
+   margin: 4rem;
 }
 .section-1-all-div{
     display: flex;
@@ -50,8 +50,62 @@ p {
 .button-class{
     background-color: #DD0000;
     padding: 1em;
-    border-radius: 5px;
+    border-radius: 10px;
     color: white;
+}
+.button-class:hover{
+   font-family: sans-serif;
+   background-color: #81d4fa;
+   font-weight: bold;
+   transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+.button-class:active {
+   transform: translateY(-1px);
+   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+.b-white {
+   background-color: #fff;
+   color: #777;
+}
+
+.button-class:after {
+   content: "";
+   display: inline-block;
+   height: 100%;
+   width: 100%;
+   border-radius: 100px;
+   position: absolute;
+   top: 0;
+   left: 0;
+   z-index: -1;
+   transition: all .4s;
+}
+
+.button-class:after {
+   background-color: #fff;
+}
+
+.button-class:hover::after {
+   transform: scaleX(1.4) scaleY(1.6);
+   opacity: 0;
+}
+
+.button-class-animated {
+   animation: moveInBottom 5s ease-out;
+   animation-fill-mode: backwards;
+}
+
+@keyframes moveInBottom {
+   0% {
+       opacity: 0;
+       transform: translateY(30px);
+   }
+
+   100% {
+       opacity: 1;
+       transform: translateY(0px);
+   }
 }
 
 /* Section 2 start */
@@ -62,25 +116,38 @@ p {
     align-items: center;
     justify-content: space-evenly;
  }
- .section-2-button{
-    height: 150px;
-    width: 150px;
-    text-align: center;
-    background-color: black;
-    border-radius: 10px;
- }
+.section-2-button{
+   height: 246px;
+   width: 289px;
+   text-align: center;
+   background-color: black;
+   border-radius: 14px;
+   display: grid;
+   grid-template-columns: repeat(1,1fr);
+   align-content: center;
+}
 
- .section-2-button-moveent{
-    align-items: center;
-    padding: 1rem;
-    margin: 1rem;
- }
- .button-class-2{
-    background-color: #DD0000;
-    padding: 1em;
-    border-radius: 9px;
-    color: white;
- }
+.section-2-button-moveent{
+   align-items: center;
+   padding: 3rem;
+   margin: 9rem;
+   margin: 1rem;
+   display: grid;
+   grid-column-gap:1rem;
+   grid-row-gap: .5rem;
+}
+.button-class-2{
+   background-color: #DD0000;
+   padding: 1em;
+   border-radius: 9px;
+   color: white;
+}
+
+
+
+  /* 
+  
+  */
  .section-2{
     display: flex;
     justify-content: space-evenly;
@@ -159,6 +226,21 @@ p {
     padding-top: 1rem;
  }
 
+ .container {
+   height: 200px;
+   display: none;
+ }
+ 
+ .vertical-center {
+   margin: 0;
+   position: absolute;
+   background-color: #DD0000;
+   
+   /* -ms-transform: translateY(-50%);
+   transform: translateY(-50%);
+   background-color: #DD0000; */
+ }
+
  /* 
  Footer Section
   */
@@ -183,7 +265,125 @@ header{
     align-items: center;
     text-align: center;
     background-color: #161616;
-} hr{
+   }
+hr{
     margin:5rem;
 
 }
+/* ------  Rrespossive
+
+----------*/
+/* mobile */
+@media only screen and (max-width:688px){
+   /* 
+   section-1
+    */
+    .container{
+      display: flex;
+      position: absolute;
+      align-items: center;
+      padding-left: 8rem;
+      width: 400px;
+   }
+   .container-back-colour{
+      background-color: red;
+   }
+    .section-1{
+      
+    }
+   .section-1-all-div{
+      display: grid;
+      width: 100%;
+   }
+   .all-section-1-child-1{
+      text-align: center;
+      margin-right: -4rem;
+      width: 258px;
+      height: 178px;
+   }
+   .all-section-1-child-2 img{
+      margin-right: 1rem;
+      width: 233px;
+      height: 245px;
+      margin-top: 6rem;
+   }
+/* 
+Section -1 End 
+*/
+/* Section 2 start */
+
+.section-2{
+   display: grid;
+}
+.section-2-button{
+   align-items: center;
+   width: 210px;
+   height: 176px;
+   margin-left: 4rem;
+   background-color: #faf9f9;
+}
+.section-2-button-moveent{
+   display: grid;
+}
+.section-2-content{
+   display: grid;
+   grid-template-columns: repeat(1,1fr);
+   grid-column-gap: 1.5rem;
+   align-items: center;
+   padding-top: 1.5rem;
+}
+.button-class-2{
+   background-color: #DD0000 ;
+}
+
+/* Section-2 End */
+
+/* ----Footer Start--- */
+ul{
+   display: grid;
+   grid-column-gap: 10px;
+}
+hr{
+   background-color: #bbaeae;
+   /* width: 335px; */  
+}
+}
+
+
+/*-------
+  Tablet Design Start
+ ------------*/
+@media only screen and (min-width:689px)  and (max-width:999px){
+   
+   
+   .section-1-all-div{
+      display: flex;
+      width: 100%;
+   }
+
+   .all-section-1-child-2 img{
+      
+   }
+   .section-2-content{
+      display: grid;
+      grid-template-columns: repeat(2,1fr);
+   }
+   .section-2{
+      display: grid;
+      grid-template-columns: 1,1fr;
+      align-items: center;
+      padding: 7rem;
+   }
+.section-2-button-moveent{
+      display: flex;
+      padding-left: 11rem;
+      margin: 1rem;
+      
+   }
+   .section-2-button{
+      background: none;
+      
+   }
+}
+
+   
