--- a/Second-page-style.css
+++ b/Second-page-style.css
@@ -54,8 +54,7 @@ p {
 /* ------
 Section - 2
 ------- */
-.section-2{;
-        
+.section-2{  
         justify-content: space-evenly;
         margin: 1rem;
         margin-top: 5rem;
